# ReminderBot

./: .breakpoints  PAT.txt  main.py  phillip.py  pyproject.toml
cogs/: CommandEvents.py  DatabaseCommands.py  HelpCommands.py  MiscCommands.py
