[tool.poetry]
name = "repl_python3_ReminderBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
pytz = "^2021.3"
response = "^0.5.0"
requests = "^2.26.0"
schedule = "^1.1.0"
discord-ext-slash = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
